--- a/capslock.ini
+++ b/capslock.ini
@@ -6,10 +6,9 @@ autostart=1
 loadScript=scriptDemo.js
 
 [QSearch]
-default=https://cn.bing.com/search?q={q}
-tr=https://cn.bing.com/dict/search?q={q}
+default=https://www.google.com/search?q={q}
 bb=https://search.bilibili.com/all?keyword={q}
-gg=https://www.google.com/search?q={q}
+git=https://github.com/search?q={q}
 [QRun]
 ;打开软件
 
@@ -25,35 +24,37 @@ ie3 <full screen>="C:\Program Files\Internet Explorer\iexplore.exe" -k
 ;管理员权限，全屏打开
 ie4=*runas "C:\Program Files\Internet Explorer\iexplore.exe" -k
 cfg=D:\tools\capslock-plus-master\CapsLock+settings.ini
-word=D:\data\doc\words.txt
+v2=D:\tools\v2rayN\v2rayN.exe
+ocr=D:\tools\Umi-OCR.v1.3.2\Umi-OCR\Umi-OCR 文字识别.exe
+word=D:\program\code\code_github\my\words.txt
 [QWeb]
 ;打开网页
 cldocs=https://capslox.com/capslock-plus
 
 [TabHotString]
+ys=dongwe92851@163.com
 mail=hongruicong1@163.com
-mail3=hongruicong@gmail.com
 mail2=hongruicong@herundasz.com
+mail3=hongruicong@gmail.com
+bule=fillColor=#3366ff;strokeColor=none;gradientColor=none;fontColor=#FFFFFF;
+yellow=fillColor=#ffb020;strokeColor=none;rounded=1;glass=0;gradientColor=none;fontColor=#FFFFFF;
+green=fontColor=#FFFFFF;fillColor=#52bd94;gradientColor=none;strokeColor=none;
+red=fontColor=#ffffff;fillColor=#d14343;gradientColor=none;strokeColor=#B20000;
+
 [QStyle]
 
 [TTranslate]
 
 [Keys]
-;光标向下移动
-caps_s=keyFunc_moveDown
-;光标向上移动
-caps_w=keyFunc_moveUp
-;光标向右移动
-caps_d=keyFunc_moveRight
-;光标向左移动
-caps_a=keyFunc_moveLeft
-
 caps_1=keyFunc_home
 caps_2=keyFunc_end
 caps_3=keyFunc_selectHome
 caps_4=keyFunc_selectEnd
-;删除至行首
 caps_5=keyFunc_deleteToLineBeginning
-;删除至行尾
 caps_6=keyFunc_deleteToLineEnd
 caps_e=keyFunc_backspace
+
+caps_w=keyFunc_moveUp
+caps_s=keyFunc_moveDown
+caps_a=keyFunc_moveLeft
+caps_d=keyFunc_moveRight
